Changed the column number

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -114,14 +114,14 @@ button {
 .grid-container {
   display: grid;
   gap: 20px 20px;
-  grid-template-columns: 100px 150px 120px 150px;
+  grid-template-columns: 100px 150px 120px 150px 150px;
   padding: 10px;
   align-content: center;
   justify-content: center;
 }
 
 .grid-item {
-  padding: 5px;
+  padding: 2px;
   margin: auto;
   text-align: center;
 }
